syntax = "proto3";

package groom;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "gRoom.gRPC.Messages";

message ReceivedMessage {
  google.protobuf.Timestamp msg_time = 1;
  string contents = 2;
  string user = 3;
}

service Groom {
  rpc StartMonitoring(google.protobuf.Empty) returns (stream ReceivedMessage);
}
