syntax = "proto3";

package groom;

option csharp_namespace = "gRoom.gRPC.Messages";

message RoomRegistrationRequest {
  string room_name = 1;
}

message RoomRegistrationResponse {
  int32 room_id = 1;
}

service Groom {
  rpc RegisterTo(RoomRegistrationRequest) returns (RoomRegistrationResponse);
}
